
syntax = "proto3";

package user;

option go_package = "github.com/uumkon/cg-test/proto/user";

service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string login = 1;
    string password = 2;
    string fio = 3;
}

message RegisterResponse {
    string fio = 1;
    string api_token = 2;
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    string fio = 1;
    string api_token = 2;
}
